--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
+        "dipantry/rajaongkir": "^2.2",
         "guzzlehttp/guzzle": "^7.2",
-        "kavist/rajaongkir": "1.1",
+        "kavist/rajaongkir": "^1.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "midtrans/midtrans-php": "^2.6",
         "php-open-source-saver/jwt-auth": "^2.1",
         "phpoffice/phpspreadsheet": "^1.29",
         "spatie/laravel-permission": "^6.2",
